--- a/templates/landing_page/home.html
+++ b/templates/landing_page/home.html
@@ -193,7 +193,7 @@
         </div>
         <div class="row">
             {% for product in page_obj %}
-            <div class="col-sm-6 col-md-4 col-lg-3 ">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 ">
                 <div class="product-item text-center">
                     <div class="product-item-image">
                         <a href="{{ product.get_absolute_url }}"><img src="{{ product.thumbnail.url}}"
