--- a/templates/cart/cart_page.html
+++ b/templates/cart/cart_page.html
@@ -16,7 +16,6 @@
                         <li class="list-inline-item"><a href="{% url 'customers:wishlist' %}">My wishlist</a></li>
                         <li class="list-inline-item"><a href="#" class="active">My cart</a></li>
                         <li class="list-inline-item"><a href="{% url 'orders:view-orders' %}">Order</a></li>
-                        <li class="list-inline-item"><a href="{% url 'customers:logout' %}" class="mr-0">Log-out</a></li>
                     </ul>
                 </div>
                 <!-- Dashboard-Nav  End-->
@@ -37,7 +36,7 @@
                     <div class="price">
                         Shipping charge
                     </div>
-                    <div class="rating">
+                    <div class="price">
                         Rating
                     </div>
                     <div class="info">
@@ -68,10 +67,10 @@
                         <div class="price">
                             <span>Rs {{ item.delivery_price }}</span>
                         </div>
-                        <div class="rating">
+                        <div class="price">
                             <li>
                             {% for star in product.get_avg_rating|ljust:product.get_avg_rating %}
-                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star" style="color: #FFA023;"></i>
                             {% endfor %}
                             </li>
                             <small><li>{{product.get_avg_rating}}({{product.count_review}} Rating)</li></small>
@@ -164,11 +163,8 @@
                     {% if request.session.coupon %}
                     <div class="card-price-list d-flex justify-content-between align-items-center">
                         <div class="item">
-                            <p>Discount</p>
+                            <p><span class="badge bg-primary">{{request.session.coupon}} </span></p>
                         </div>
-                        
-                        <span class="badge bg-primary">Promotion Applied with {{request.session.coupon}} </span>
-                        
                         <div class="price">
                             <p>- Rs {{ cart.get_coupon_amount }} </p>
                         </div>
