--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -6,7 +6,7 @@
                 <div class="main-footer-info">
                     <img src="{% static 'dist/images/logo/logo.png' %}" alt="Logo" class="img-fluid">
                     <p>
-                        The market place for all your favorite elctonic products
+                        The market place for all your favorite electonic products.
                     </p>
                 </div>
             </div>
@@ -28,8 +28,8 @@
                         <li><a href="#">New Realease</a></li>
                         <li><a href="#">Customize</a></li>
                         <li><a href="#">Sale &amp; Discount</a></li>
-                        <li><a href="#">Men</a></li>
-                        <li><a href="#">Women</a></li>
+                        <li><a href="#">Eshop</a></li>
+                        <li><a href="#">Gadgets</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             <div class="col-lg-12">
                 <div class="copyright d-flex justify-content-between align-items-center">
                     <div class="copyright-text order-2 order-lg-1">
-                        <p>&copy; 2020. Design and Developed by <a href="#">Zakir Soft</a></p>
+                        <p>&copy; 2020. Design and Developed by <a href="#">Renjith VS</a></p>
                     </div>
                     <div class="copyright-links order-1 order-lg-2">
                         <a href="#" class="ml-0"><i class="fab fa-facebook-f"></i></a>
