--- a/templates/payment/payment_method.html
+++ b/templates/payment/payment_method.html
@@ -95,11 +95,8 @@
                     {% if request.session.coupon %}
                     <div class="card-price-list d-flex justify-content-between align-items-center">
                         <div class="item">
-                            <p>Discount</p>
+                            <p><span class="badge bg-primary">{{request.session.coupon}} </span></p>
                         </div>
-                        
-                        <span class="badge bg-primary">Promotion Applied with {{request.session.coupon}} </span>
-                        
                         <div class="price">
                             <p>- Rs {{ cart.get_coupon_amount }} </p>
                         </div>
