--- a/templates/vendor-orders/order-list.html
+++ b/templates/vendor-orders/order-list.html
@@ -1,8 +1,201 @@
 {% extends "../base_vendor.html" %}
 {% block content%}
-<!-- table -container start here -->
+{% load humanize %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xl-3 col-md-6">
+            <div class="card bg-pattern">
+                <div class="card-body">
+                    <div class="float-right">
+                        <i class="fa fa-archive text-primary h4 ml-3"></i>
+                    </div>
+                    <h5 class="font-size-20 mt-0 pt-1">{{total_transaction}}</h5>
+                    <p class="text-muted mb-0">Total Transactions</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <div class="card bg-pattern">
+                <div class="card-body">
+                    <div class="float-right">
+                        <i class="fa fa-th text-primary h4 ml-3"></i>
+                    </div>
+                    <h5 class="font-size-20 mt-0 pt-1">{{total_paid}}</h5>
+                    <p class="text-muted mb-0">Total Completed Payment</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <div class="card bg-pattern">
+                <div class="card-body">
+                    <div class="float-right">
+                        <i class="fa fa-file text-primary h4 ml-3"></i>
+                    </div>
+                    <h5 class="font-size-20 mt-0 pt-1">Rs {{total_pending|intcomma}}</h5>
+                    <p class="text-muted mb-0">Total Pending</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-3 col-md-6">
+            <div class="card bg-pattern">
+                <div class="card-body">
+                    <div class="float-right">
+                        <i class="fa fa-file text-primary h4 ml-3"></i>
+                    </div>
+                    <h5 class="font-size-20 mt-0 pt-1">Rs {{total_earning|intcomma}}</h5>
+                    <p class="text-muted mb-0">Total Earnings</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end row -->
 
-<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="table-responsive project-list">
+                        <table class="table project-table table-centered table-nowrap" id='order-table'>
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Product</th>
+                                    <th scope="col">Created at</th>
+                                    <th scope="col">Address</th>
+                                    <th scope="col">Payment Mode</th>
+                                    <th scope="col">Progress</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for order in orders %}
+                                <tr>
+                                    <th scope="row">{{ forloop.counter }}</th>
+                                    <td>{{order.product|truncatechars:20}}</td>
+                                    <td>{{ order.order.created }}</td>
+                                    <td>
+                                        {{order.order.address1 }}
+                                    </td>
+                                    <td>
+                                        <span class="text-success font-12"> {{order.order.payment_option }}</span>
+                                    </td>
+                                    <td>
+                                        {% if order.order_status == "In process" %}
+                                        <p class="mb-0">{{order.order_status}}<span class="float-right">25%</span></p>
+
+                                        <div class="progress mt-2" style="height: 5px;">
+                                            <div class="progress-bar bg-secondary" role="progressbar"
+                                                style="width: 100%;" aria-valuenow="25" aria-valuemin="25"
+                                                aria-valuemax="100"></div>
+                                        </div>
+                                        {% elif order.order_status == "Shipped" %}
+                                        <p class="mb-0">{{order.order_status}}<span class="float-right">50%</span></p>
+
+                                        <div class="progress mt-2" style="height: 5px;">
+                                            <div class="progress-bar bg-primary" role="progressbar" style="width: 100%;"
+                                                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        {% elif order.order_status == "Delivered" %}
+                                        <p class="mb-0">{{order.order_status}}<span class="float-right">100%</span></p>
+
+                                        <div class="progress mt-2" style="height: 5px;">
+                                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%;"
+                                                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        {% elif order.order_status == "Cancelled" %}
+                                        <p class="mb-0">{{order.order_status}}<span class="float-right"></span></p>
+
+                                        <div class="progress mt-2" style="height: 5px;">
+                                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%;"
+                                                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        {% endif %}
+
+                                    </td>
+
+                                    <td>
+                                        <div class="action">
+                                            <a class="text-success mr-4" data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal-{{order.id}}" data-original-title="Edit">
+                                                <svg enable-background="new 0 0 19 19" height="19px" id="Layer_1"
+                                                    version="1.1" viewBox="0 0 19 19" width="19px" xml:space="preserve"
+                                                    xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                    <g>
+                                                        <path
+                                                            d="M8.44,7.25C8.348,7.342,8.277,7.447,8.215,7.557L8.174,7.516L8.149,7.69   C8.049,7.925,8.014,8.183,8.042,8.442l-0.399,2.796l2.797-0.399c0.259,0.028,0.517-0.007,0.752-0.107l0.174-0.024l-0.041-0.041   c0.109-0.062,0.215-0.133,0.307-0.225l5.053-5.053l-3.191-3.191L8.44,7.25z"
+                                                            fill="#231F20" />
+                                                        <path
+                                                            d="M18.183,1.568l-0.87-0.87c-0.641-0.641-1.637-0.684-2.225-0.097l-0.797,0.797l3.191,3.191l0.797-0.798   C18.867,3.205,18.824,2.209,18.183,1.568z"
+                                                            fill="#231F20" />
+                                                        <path
+                                                            d="M15,9.696V17H2V2h8.953l1.523-1.42c0.162-0.161,0.353-0.221,0.555-0.293   c0.043-0.119,0.104-0.18,0.176-0.287H0v19h17V7.928L15,9.696z"
+                                                            fill="#231F20" />
+                                                    </g>
+                                                </svg></a>
+                                        </div>
+                                        <div class="modal fade" id="exampleModal-{{order.id}}" tabindex="-1"
+                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Change order
+                                                            Status </h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                    </div>
+                                                    <form method="post"
+                                                        action="{% url 'orders:vendor_order_status_update' %}">
+                                                        {% csrf_token %}
+                                                        <div class="modal-body">
+                                                            <div class="mb-3">
+                                                                <input type="hidden" id="order_id" name="order_id"
+                                                                    value="{{order.id}}">
+                                                                <label for="recipient-name" class="col-form-label">Order
+                                                                    Status:</label>
+                                                                <select class="form-select" id="order_status"
+                                                                    name="order_status"
+                                                                    aria-label="Default select example">
+                                                                    <option> Select your status</option>
+                                                                    <option value="Shipped">Shipped</option>
+                                                                    <option value="Delivered">Delivered</option>
+                                                                    <option value="Cancelled">Cancelled</option>
+                                                                </select>
+                                                            </div>
+                                                            <div class="mb-3">
+                                                                <div class="alert alert-primary text-center"
+                                                                    role="alert">
+                                                                    Please Note: Can't change status of
+                                                                    Cancelled/Delivered items
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary"
+                                                                data-bs-dismiss="modal">Close</button>
+                                                            <button type="submit"
+                                                                class="btn btn-primary">Confirm</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end row -->
+</div>
+
+<!-- table -container start here -->
+{% comment %} <div class="container mt-4">
     <table class="table table-bordered" id='order-table' style="text-align:center;">
         <thead>
             <th> Number</th>
@@ -47,11 +240,30 @@
         </tr>
         {% endfor %}
     </table>
-</div>
+</div> {% endcomment %}
 <!-- table ends -->
-
 <style>
+    body {
 
+        margin-top: 20px;
+        color: #616f80;
+    }
+
+    .card {
+        border: none;
+        margin-bottom: 24px;
+        -webkit-box-shadow: 0 0 13px 0 rgba(236, 236, 241, .44);
+        box-shadow: 0 0 13px 0 rgba(236, 236, 241, .44);
+    }
+
+    .avatar-xs {
+        height: 2.3rem;
+        width: 2.3rem;
+    }
+
+    .bg-pattern {
+        background: #f3f3f3;
+    }
 </style>
 {% endblock %}
 
